# gzstd

./: .gitignore  BENCHMARK.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  PERFORMANCE_LOG.md  ROADMAP.md  gpuverify.cu  gzstd-benchmark.sh  gzstd-gendata.sh  gzstd-test.sh  gzstd.cpp
.github/workflows/: release-portable.yml
scripts/: build-portable.sh  drop_cache
